# ProteoBench

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  Test_workflow.ipynb  Untitled-1.ipynb  noxfile.py  pyproject.toml  resubmit_datapoints.py  results.json  searchindex.js  setup.py  test_proline.csv
.doctrees/: changelog.doctree  environment.pickle  index.doctree
.doctrees/proteobench/: modules.doctree  proteobench.doctree  proteobench.io.doctree  proteobench.modules.dda_id.doctree  proteobench.modules.dda_quant.doctree  proteobench.modules.dia_id.doctree  proteobench.modules.dia_quant.doctree  proteobench.modules.doctree  proteobench.modules.metaproteomics.doctree  proteobench.modules.rescoring.doctree  proteobench.modules.template.doctree  proteobench.plot.doctree
.doctrees/reference/: index.doctree
.doctrees/user_guide/: index.doctree
.doctrees/webinterface/: modules.doctree  webinterface.doctree
.github/DISCUSSION_TEMPLATE/: Ideas for new modules to discuss.yml  Ideas_for_new_modules_to_discuss.yml  potential-new-module-to-discuss.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: automated_release.yml  black-formatting.yml  build_docs.yml  publish_pypy.yml  python-package.yml  test-streamlit.yml
Data/WOMBAT/: benchmarks_compomics.json  benchmarks_maxquant.json  benchmarks_proline.json  benchmarks_tpp.json  stand_pep_quant_mergedtpp.csv  stand_prot_quant_mergedcompomics.csv  stand_prot_quant_mergedmaxquant.csv  stand_prot_quant_mergedproline.csv  stand_prot_quant_mergedtpp.csv
ProteoBench/: CHANGELOG.md
ProteoBench/proteobench/: __init__.py  exceptions.py
ProteoBench/test/: test_github_repo.py  test_parse_params_diann.py  test_parse_params_fragger.py  test_parse_params_i2masschroq.py  test_parse_params_peaks.py  test_parse_params_proline.py  test_plot_quant.py
ProteoBench/webinterface/: Home.py  UI_utils.py  test.csv
TODO/: DONE_summary.md  TODO_DRY.md  TODO_anndata_mapping.md  TODO_creating_test_harness.md  TODO_dead_code_hunter.md  TODO_duplicated_code_in_DIA_modules.md  TODO_file_parsing_melt.md  TODO_separate_parsing_benchmarking.md  TODO_step_by_step_apr16.md  TODO_still_open.md
TODO/DONE/: TODO_duplicated_code_in_DIA_modules.md  TODO_move_sample_annotation_to_module_settings.md  TODO_parsing_structure.md  TODO_test_datastes.md
docs/: Instructions_new_module.docx  README.md  ROC_AUC_COMMIT_SUMMARY.md  api.rst  changelog.rst  conf.py  contact.md  contributing.rst  generate_input_tables.py  generate_module_grid.py  index.rst  module_grid_generated.rst  module_in_discussion_grid_extra.yaml  parse_tables.py  parsing_overview.tsv  requirements.txt
docs/_static/: switcher.json
docs/_templates/: custom-module-template.rst  sidebar-nav-bs.html
docs/about/: faq.md  index.md
docs/available-modules/: 1-description-benchmark-module.md  12-parsed-parameters-for-public-submission.md  2-DDA-Quantification-ion-level.md  2-quant-lfq-ion-dda.md  3-DDA-Quantification-ipeptidoform-level.md  3-DDA-Quantification-peptidoform-level.md  3-quant-lfq-peptidoform-dda.md  4-DIA-Quantification.md  4-quant-lfq-ion-dia-aif.md  5-quant-lfq-ion-dia-diapasef.md  6-quant-lfq-ion-dia-singlecell.md  7-quant-lfq-precursor-dia-Astral_2Th.md  8-quant-lfq-precursor-dda-Astral  8-quant-lfq-precursor-dda-Astral.md  9-denovo-lfq-dda-hcd.md  index.rst
docs/concepts/: glossary.md  index.rst  intermediate-format.md  module-lifecycle.md  parameter-parsing.md
docs/contributing/: adding-a-module.rst  changelog.rst  development-setup.md  index.md  local-usage.md  modifying-a-module.md  parameter-homogenization.md  propose-a-module.md  repo-layout.md  (+1 more)
examples/: local_usage_walkthrough.ipynb
jupyter_notebooks/: DIA_analysis.ipynb  Individual submission.ipynb  MSAID_input_conversion.ipynb  PD_input_conversion.ipynb  ProteoBench_input_conversion.ipynb  Server resubmission.ipynb  Test_workflow.ipynb  fig5_upsetplot.ipynb  mean_vs_median_DDA.ipynb  plot_runs_sage.ipynb  test_param_parsing.ipynb  test_scoring_class.ipynb
proteobench/: __init__.py  exceptions.py
scripts/: check_contributing_institutes_symlink.sh
test/: catalog_regression_overrides.json  test_catalog_regression.py  test_convert_to_intermediate.py  test_github_repo.py  test_load_input.py  test_module_dda_quant.py  test_module_dia_quant.py  test_module_entrapment_ion_DIA_Astral.py  test_module_quant_ion_DDA_QExactive.py  test_module_quant_ion_DIA_AIF.py  test_module_quant_ion_dda.py  test_module_quant_ion_dia.py  test_module_quant_proteingroup_DIA_Astral.py  test_module_subcellprofile_domlfq_protein_dia_expl.py  test_modules_constants.py  test_new_parse_input.py  test_normalize_dataframe.py  test_parameter_filters.py  test_parameter_normalization.py  test_params_validation.py  test_parse_params.py  test_parse_params_alphadia.py  test_parse_params_alphapept.py  test_parse_params_diann.py  test_parse_params_fragger.py  test_parse_params_i2masschroq.py  test_parse_params_maxquant.py  test_parse_params_metamorpheus.py  test_parse_params_msangel.py  test_parse_params_peaks.py  test_parse_params_proline.py  test_parse_params_quantms.py  test_parse_params_sage.py  test_parse_params_spectronaut.py  test_parse_params_wombat.py  test_parse_settings.py  test_parse_utils.py  test_peaks_diapasef_regression.py  test_plot_quant.py  test_proforma.py  (+11 more)
test_data_download/: Makefile  extract_raw_file_db.py
utilities/: get_dataset_info.py
webinterface/: Home.py  README.md  UI_utils.py  Untitled.ipynb  WI_utils.py  _base.py  _utils.py  requirements.txt  streamlit_utils.py  test.csv
(+1143 files in other folders)
